--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -3,6 +3,16 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 0 !important;
+    height: 0;
+  }
+
+  &::-webkit-scrollbar-track {
+    width: 0;
+  }
 }
 
 .tab-new {
